Enigma/testing/error/movingrotorwrongplace.inp
* B I II III IV AABC (BC)
JIOJS